--- a/fix_store/repair_shop/templates/repair_shop/index.html
+++ b/fix_store/repair_shop/templates/repair_shop/index.html
@@ -2,7 +2,11 @@
 
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="intro">
-
+<div>
+    {% for post in file %}
+    <h2>{{ post.title }}</h2>
+    <a href="{{ post.admin_upload.url }}" download="{{ post.admin_upload.url }}">Download</a>
+    {% endfor %}
 </div>
+
 {% endblock %}
