--- a/fix_store/repair_shop/templates/repair_shop/queued.html
+++ b/fix_store/repair_shop/templates/repair_shop/queued.html
@@ -19,9 +19,14 @@
                     <p class="second-p">
                         {{ client_card.breakage }}
                     </p>
+                    <p class="button-p">
+                        <button class="choice-btn" onclick="location.href='{% url 'master-select' client_card.slug client_card.pk %}'">Передати майстру</button>
+                        <button class="choice-btn" onclick="location.href='{% url 'warranty-update' client_card.slug client_card.pk %}'">Створити гарантійку</button><br>
+                        <button class="choice-btn" onclick="location.href='{% url 'create_xlsx' client_card.slug client_card.pk %}'">XLSX file</button>
+                        <button class="choice-btn" onclick="location.href='{% url 'master-select' client_card.slug client_card.pk %}'">Друк</button>
+                    </p>
                 </div>
             </div>
-            <a href="{% url 'master-select' client_card.slug client_card.pk %}" class="btn-take">Передати майстру</a>
         </div>
         {% endfor %}
 
