--- a/fix_store/repair_shop/static/repair_shop/css/styles.css
+++ b/fix_store/repair_shop/static/repair_shop/css/styles.css
@@ -98,13 +98,19 @@ ___________________*/
     margin-down: 40px;
     display: inline-grid;
     width: 290px;
-    height: 300px;
+    height: 320px;
     margin-bottom: 10px;
 }
 
 .card1{
     width: 280px;
     background: #414146;
+    margin: 20px;
+}
+
+.card2{
+    width: 280px;
+    background: #554441;
     margin: 20px;
 }
 
@@ -164,7 +170,7 @@ ___________________*/
     position: relative;
     left: 10px;
     background: grey;
-    margin: 10px;
+    margin-left: 15px;
     border-radius: 4px
 }
 
@@ -176,7 +182,8 @@ ___________________*/
     position: relative;
     left: 10px;
     background: #507971;
-    margin: 10px;
+    margin-left: 15px;
+    border-radius: 4px
 }
 
 
