--- a/fix_store/repair_shop/templates/repair_shop/queued.html
+++ b/fix_store/repair_shop/templates/repair_shop/queued.html
@@ -10,10 +10,16 @@
         <form class="search" method="GET" action="" >
             <input type="search" name="search">
             <button  type="submit"> Search </button>
+            Для пошуку по даті  (date 2010-01)
         </form>
         {% for client_card in client_cards %}
+
         <div class="card">
+            {% if client_card.is_fixed %}
             <div class="card1">
+            {% else %}
+            <div class="card2">
+            {% endif %}
                 <div class="top-card">
                     {{ client_card.name }}
                 </div>
@@ -25,10 +31,11 @@
                         {{ client_card.breakage }}
                     </p>
                     <p class="button-p">
-                        <button class="choice-btn" onclick="location.href='{% url 'master-select' client_card.slug client_card.pk %}'">Редагувати   __  </button>
+                        <button class="choice-btn" onclick="location.href='{% url 'master-select' client_card.slug client_card.pk %}'">Редагувати прийомку  </button>
                         <button class="choice-btn" onclick="location.href='{% url 'warranty-update' client_card.slug client_card.pk %}'">Створити гарантійку</button><br>
-                        <button class="choice-btn" onclick="location.href='{% url 'create_xlsx' client_card.slug client_card.pk %}'">XLSX file</button>
-                        <button class="choice-btn" onclick="location.href='{% url 'create_warranty_xlsx' client_card.slug client_card.pk %}'">Друк</button>
+                         ______________завантажити_______________ <br><br>
+                        <button class="choice-btn" onclick="location.href='{% url 'create_xlsx' client_card.slug client_card.pk %}'">Прийомка</button>
+                        <button class="choice-btn" onclick="location.href='{% url 'create_warranty_xlsx' client_card.slug client_card.pk %}'">Гарантійка</button>
                     </p>
                 </div>
             </div>
